return code fixes, jsonld context helper url added
